--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,9 +79,9 @@
       <div class="wrap">
         <nav class="menuModal" id="navigate">
           <ul class="menu menu_main">
-            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/index.html">Главная</a>
+            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/bookshop/main">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/genres/index.html">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/genres">Жанры</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
             </li>
