--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
       xmlns:th="http://www.thymeleaf.org">
 <!--<![endif]-->
 <head>
-  <title>Книжный магазин</title>
+  <title th:text="#{title}">Книжный магазин</title>
   <meta name="description" content="Описание страницы">
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <!--meta( http-equiv="cache-control" content="no-cache")-->
   <!--meta( http-equiv="expires" content="0")-->
@@ -31,6 +31,20 @@
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=64223515"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script defer src="/assets/js/scripts.min.js?v=64223515"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("#locales").change(function () {
+                var selectedOption = $('#locales').val();
+                if (selectedOption != ''){
+                    window.location.replace('?lang=' + selectedOption);
+                }
+            });
+        });
+    </script>
+
 </head>
 <body class="Site">
   <!--if lt IE 8
@@ -54,8 +68,10 @@
             <div class="Header-search">
               <div class="search">
                 <form class="form form_search" action="#" method="post" data-searchlimit="20">
-                  <input class="search-input" id="query" name="query" type="text" placeholder="Search over 30 million book titles" value=""/>
-                  <button class="search-button" type="submit" name="search" id="search">Поиск
+                  <input class="search-input" id="query" name="query" type="text"
+                         th:placeholder="#{searchbar.placeholder}"
+                         placeholder="Search books here" value=""/>
+                  <button class="search-button" type="submit" name="search" id="search" th:text="#{searchbar.search}">Поиск
                   </button>
                 </form>
               </div>
@@ -79,15 +95,15 @@
       <div class="wrap">
         <nav class="menuModal" id="navigate">
           <ul class="menu menu_main">
-            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/bookshop/main">Главная</a>
+            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/bookshop/main" th:text="#{topbar.main}"></a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/genres">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/genres" th:text="#{topbar.genres}"></a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+            <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:text="#{topbar.news}"></a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+            <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:text="#{topbar.popular}"></a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/authors">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/authors" th:text="#{topbar.authors}"></a>
             </li>
           </ul>
         </nav>
@@ -101,7 +117,7 @@
         <div class="Section">
 
           <div class="Section-header">
-            <h2 class="Section-title">Рекомендуемое </h2>
+            <h2 class="Section-title" th:text="#{middle.recommendations}">Рекомендуемое </h2>
           </div>
 
           <div class="Slider Slider_carousel">
@@ -125,114 +141,7 @@
                 </div>
               </div>
 
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>-->
-<!--                      <div class="Card-sale">30% скидка-->
-<!--                      </div></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Английский язык. 5 класс. Английский в фокусе. Рабочая тетрадь. ФГОС</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Ваулина, Дули, Подоляко-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-priceOld">₽250.00</span><span class="Card-price">₽210.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Быкова, Дули, Эванс-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-price">₽190.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Великая Отечественная война. 1941-1945</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-price">₽50.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Большое путешествие по телу человека</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Джон Фарндон-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-price">₽900.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Быкова, Дули, Эванс-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-price">₽190.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Великая Отечественная война. 1941-1945</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-price">₽50.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
-
-<!--              <div class="Slider-item">-->
-<!--                <div class="Slider-content">-->
-<!--                  <div class="Card"><a class="Card-picture" href="/books/slug.html"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>-->
-<!--                    <div class="Card-content">-->
-<!--                      <strong class="Card-title"><a href="/books/slug.html">Большое путешествие по телу человека</a>-->
-<!--                      </strong>-->
-<!--                      <div class="Card-description">Джон Фарндон-->
-<!--                      </div>-->
-<!--                      <div class="Card-cost"><span class="Card-price">₽900.00</span>-->
-<!--                      </div>-->
-<!--                    </div>-->
-<!--                  </div>-->
-<!--                </div>-->
-<!--              </div>-->
             </div>
-
 
             <div class="Slider-navigateWrap">
               <div class="Slider-navigate">
@@ -244,7 +153,7 @@
             </div>
           </div>
           <div class="Section-header">
-            <h2 class="Section-title">Новинки </h2>
+            <h2 class="Section-title" th:text="#{topbar.news}">Новинки </h2>
           </div>
           <div class="Slider Slider_carousel">
             <div class="Slider-box Cards" data-load="recent" data-loadoffset="8" data-loadlimit="20">
@@ -387,7 +296,7 @@
             </div>
           </div>
           <div class="Section-header">
-            <h2 class="Section-title">Популярное
+            <h2 class="Section-title" th:text="#{topbar.popular}">Популярное
             </h2>
           </div>
           <div class="Slider Slider_carousel">
@@ -524,7 +433,7 @@
           </div>
         </div>
 
-        <h2 class="Middle-title">Книги по тегам </h2>
+        <h2 class="Middle-title" th:text="#{middle.tags}">Книги по тегам </h2>
 
         <div class="Tags" id="tags">
           <div class="Tag Tag_xs"><a href="/tags/index.html">современная литература</a>
@@ -652,30 +561,40 @@
         </div>
         <div class="row-block">
           <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/main" th:text="#{topbar.main}">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/genres">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/genres" th:text="#{topbar.genres}">Жанры</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
+            <li class="menu-item"><a class="menu-link" href="/books/recent.html" th:text="#{topbar.news}">Новинки</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
+            <li class="menu-item"><a class="menu-link" href="/books/popular.html" th:text="#{topbar.popular}">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/authors">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/bookshop/authors" th:text="#{topbar.authors}">Авторы</a>
             </li>
           </ul>
         </div>
         <div class="row-block">
           <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="/signin.html">Войти</a>
+            <li class="menu-item"><a class="menu-link" href="/signin.html" th:text="#{signin}">Войти</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/documents/index.html">Документы</a>
+            <li class="menu-item"><a class="menu-link" href="/documents/index.html" th:text="#{documents}">Документы</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/about.html">О компании</a>
+            <li class="menu-item"><a class="menu-link" href="/about.html" th:text="#{about}">О компании</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/faq.html">Помощь</a>
+            <li class="menu-item"><a class="menu-link" href="/faq.html" th:text="#{faqs}">Помощь</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/contacts.html">Контакты</a>
+            <li class="menu-item"><a class="menu-link" href="/contacts.html" th:text="#{contacts}">Контакты</a>
             </li>
+
+            <li class="menu-item">
+                <span th:text="#{menu.select}">Выбор языка</span>
+                <select id="locales">
+                  <option value=""></option>
+                  <option value="en">English</option>
+                  <option value="ru">Русский</option>
+                </select>
+            </li>
+
           </ul>
         </div>
       </div>
