--- a/src/main/resources/templates/genres/genres.html
+++ b/src/main/resources/templates/genres/genres.html
@@ -76,15 +76,15 @@
       <div class="wrap">
         <nav class="menuModal" id="navigate">
           <ul class="menu menu_main">
-            <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
+            <li class="menu-item"><a class="menu-link" href="/">Главная</a>
             </li>
-            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/bookshop/genres">Жанры</a>
+            <li class="menu-item menu-item_ACTIVE"><a class="menu-link" href="/genres">Жанры</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/authors">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors">Авторы</a>
             </li>
           </ul>
         </nav>
@@ -266,15 +266,15 @@
         </div>
         <div class="row-block">
           <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="/bookshop/main">Главная</a>
+            <li class="menu-item"><a class="menu-link" href="/">Главная</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/genres">Жанры</a>
+            <li class="menu-item"><a class="menu-link" href="/genres">Жанры</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/recent.html">Новинки</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="/books/popular.html">Популярное</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="/bookshop/authors">Авторы</a>
+            <li class="menu-item"><a class="menu-link" href="/authors">Авторы</a>
             </li>
           </ul>
         </div>
