--- a/src/main/resources/templates/tags/index.html
+++ b/src/main/resources/templates/tags/index.html
@@ -24,11 +24,11 @@
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=45035206">
-  <link rel="stylesheet" href="/assets/css/basic.min.css?v=45035206">
-  <link rel="stylesheet" href="/assets/css/extra.min.css?v=45035206"><!--[if lt IE 9]>
+  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=91228662">
+  <link rel="stylesheet" href="/assets/css/basic.min.css?v=91228662">
+  <link rel="stylesheet" href="/assets/css/extra.min.css?v=91228662"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script defer src="/assets/js/scripts.min.js?v=45035206"></script>
+  <script defer src="/assets/js/scripts.min.js?v=91228662"></script>
 
   <div th:insert="~{fragments/script_fragment :: scripts}"></div>
 </head>
@@ -43,7 +43,7 @@
       | для правильного отображения сайта.
   -->
 
-  <header th:replace="~{fragments/header_fragment :: headFragment }"></header>
+  <header th:replace="~{fragments/header_fragment :: headFragment}"></header>
 
   <div class="Middle">
     <div class="wrap">
@@ -51,34 +51,22 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item"><a href="/" th:text="#{topbar.main}">Главная</a>
           </li>
-          <li class="breadcrumbs-item"><a href="/genres" th:text="#{books}">Книги</a>
-          </li>
-          <li class="breadcrumbs-item breadcrumbs-item_current"><span th:text="#{topbar.popular}">Популярное</span>
+          <li class="breadcrumbs-item breadcrumbs-item_current"><span>Психологическая проза</span>
           </li>
         </ul>
         <div class="Section">
           <div class="Section-header">
-            <h1 class="Section-title" th:text="#{topbar.popular}">Популярное
+            <h1 class="Section-title">Психологическая проза
             </h1>
+            <div class="Section-header-links"><a class="Section-header-link" href="/index.html#tags">Все тэги</a>
+            </div>
           </div>
           <div class="Cards Cards_refresh">
             <div class="Card">
               <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
               </div>
               <div class="Card-content">
-                <strong class="Card-title"><a href="#" th:text="#{technics}">Техника</a>
-                </strong>
-                <div class="Card-description">Кондратенко Александр Петрович
-                </div>
-                <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                </div>
-              </div>
-            </div>
-            <div class="Card">
-              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-              </div>
-              <div class="Card-content">
-                <strong class="Card-title"><a href="#" th:text="#{technics}">Техника</a>
+                <strong class="Card-title"><a href="#">Техника</a>
                 </strong>
                 <div class="Card-description">Кондратенко Александр Петрович
                 </div>
@@ -154,7 +142,7 @@
             </div>
             <div class="Card">
               <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                <div class="Card-ribbon"><span class="Card-ribbonText" th:text="#{bestseller}">Бестселлер</span>
+                <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
                 </div>
               </div>
               <div class="Card-content">
@@ -204,6 +192,18 @@
             </div>
             <div class="Card">
               <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+              </div>
+              <div class="Card-content">
+                <strong class="Card-title"><a href="#">Техника</a>
+                </strong>
+                <div class="Card-description">Кондратенко Александр Петрович
+                </div>
+                <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
+                </div>
+              </div>
+            </div>
+            <div class="Card">
+              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                 <div class="Card-sale">30% скидка
                 </div>
               </div>
@@ -232,7 +232,7 @@
               <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
                 <div class="Card-sale">30% скидка
                 </div>
-                <div class="Card-ribbon"><span class="Card-ribbonText" th:text="#{bestseller}">Бестселлер</span>
+                <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
                 </div><a class="Card-status" title="Куплена"><img src="/assets/img/icons/check.svg" alt="check.svg"/></a>
               </div>
               <div class="Card-content">
@@ -270,7 +270,7 @@
             </div>
             <div class="Card">
               <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                <div class="Card-ribbon"><span class="Card-ribbonText" th:text="#{bestseller}">Бестселлер</span>
+                <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
                 </div>
               </div>
               <div class="Card-content">
@@ -318,7 +318,7 @@
                 </div>
               </div>
             </div>
-            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="popular" data-refreshoffset="20" data-refreshlimit="20">Показать еще</a>
+            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="tag" data-refreshoffset="20" data-refreshlimit="20" data-refreshid="10">Показать еще</a>
             </div>
           </div>
         </div>
@@ -326,8 +326,6 @@
     </div>
   </div>
 
-  <footer th:replace="~{fragments/footer_fragment :: footerFragment}"> </footer>
-
+  <footer th:replace="~{fragments/footer_fragment :: footerFragment}"></footer>
   <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
-</body>
-</html>
+</body></html>
