Add Spring Pagination functionality for recommended books

--- a/src/main/resources/templates/fragments/script_fragment.html
+++ b/src/main/resources/templates/fragments/script_fragment.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="scripts">
+<div th:fragment="scripts">
     <script>
         $(document).ready(function() {
             $('.mdb-select').materialSelect();
@@ -19,8 +17,4 @@
             });
         });
     </script>
-</head>
-<body>
-
-</body>
-</html>
+</div>
