--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,11 +58,11 @@
           </div>
 
           <div class="Slider Slider_carousel">
-            <div class="Slider-box Cards" data-load="recommended" data-loadoffset="8" data-loadlimit="20">
+            <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="20">
 
-              <div class="Slider-item" th:each="book : ${bookData}">
+              <div class="Slider-item" th:each="book : ${recommendedBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+                  <div class="Card"><a class="Card-picture" th:href="@{/books/slug}"><img th:src="${book.image}" alt="card.jpg"/></a>
                     <div class="Card-content">
                       <strong class="Card-title">
                         <a th:href="@{/books/slug}" th:text="${book.title}">Техника</a>
