--- a/src/main/resources/templates/books/recent.html
+++ b/src/main/resources/templates/books/recent.html
@@ -62,31 +62,31 @@
               <div class="form-group">
                 <label class="form-label">с
                 </label>
-                <input class="form-input form-input_date form-input_date_uninit" id="fromdaterecent" name="fromdaterecent" type="text" placeholder="Дата" data-refreshoffset="20" data-refreshlimit="20" data-refreshshow="changedate" data-refreshfrom="0" autocomplete="off"/>
+                <input class="form-input form-input_date form-input_date_uninit" id="fromdaterecent" name="fromdaterecent" type="text" placeholder="Дата" data-refreshoffset="0" data-refreshlimit="5" data-refreshshow="changedate" data-refreshfrom="0" autocomplete="off"/>
               </div>
               <div class="form-group">
                 <label class="form-label">по
                 </label>
-                <input class="form-input form-input_date form-input_date_uninit" id="enddaterecent" name="enddaterecent" type="text" placeholder="Дата" data-refreshoffset="20" data-refreshlimit="20" data-refreshshow="changedate" data-refreshto="0" autocomplete="off"/>
+                <input class="form-input form-input_date form-input_date_uninit" id="enddaterecent" name="enddaterecent" type="text" placeholder="Дата" data-refreshoffset="0" data-refreshlimit="5" data-refreshshow="changedate" data-refreshto="0" autocomplete="off"/>
               </div>
             </form>
           </div>
           <div class="Cards Cards_refresh">
 
-            <div class="Card">
-              <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a><a class="Card-status" title="Отложена"><img src="/assets/img/icons/heart.svg" alt="heart.svg"/></a>
+            <div class="Card" th:each="book : ${filteredBooks}">
+              <div class="Card-picture"><a href="#"><img th:src="${book.image}" alt="card.jpg"/></a>
               </div>
               <div class="Card-content">
-                <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
+                <strong class="Card-title"><a href="#" th:text="${book.title}">Большое путешествие по телу человека</a>
                 </strong>
-                <div class="Card-description">Джон Фарндон
+                <div class="Card-description" th:text="${book.author}">Джон Фарндон
                 </div>
-                <div class="Card-cost"><span class="Card-price">₽900.00</span>
+                <div class="Card-cost"><span class="Card-price" th:text="${book.price}"></span>
                 </div>
               </div>
             </div>
 
-            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="recent" data-refreshoffset="20" data-refreshlimit="20">Показать еще</a>
+            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#" data-refreshshow="recent" data-refreshoffset="0" data-refreshlimit="5">Показать еще</a>
             </div>
           </div>
         </div>
