--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,8 +70,8 @@
                       <div class="Card-description" th:text="${book.author}">Кондратенко Валерий Петрович
                       </div>
                       <div class="Card-cost">
-                        <span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span>
-                        <span class="Card-price" th:text="${book.price}">₽190.00</span>
+                        <span class="Card-priceOld" th:text="${book.priceOld}"></span>
+                        <span class="Card-price" th:text="${book.price}"></span>
                       </div>
                     </div>
                   </div>
